# pyright-verifytypes-typealiastype

./: README.md  pyproject.toml
demo/: __init__.py
