[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pyright>=1.1.388",
    "typing_extensions>=4.12.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["demo"]
venvPath = "."
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnusedImport = false
